add many things

--- a/dashboard.html
+++ b/dashboard.html
@@ -70,6 +70,24 @@
           </div>
         </li>
         </a>
+        <a href="/signin">
+        <li>
+          <span class="feature-icon"><i class="fa-solid fa-earth-americas"></i></span>
+          <div>
+            <div class="feature-title">Signin / Signup</div>
+            <div class="feature-desc">Signin / SignUp to Daylee</div>
+          </div>
+        </li>
+        </a>
+        <a href="/join">
+        <li>
+          <span class="feature-icon"><i class="fa-solid fa-earth-americas"></i></span>
+          <div>
+            <div class="feature-title">Join A Family</div>
+            <div class="feature-desc">Join your Family and share calendars and locations with Daylee.</div>
+          </div>
+        </li>
+        </a>
       </ul>
     </section>
     <section class="mockup">
