--- a/ai.html
+++ b/ai.html
@@ -40,6 +40,9 @@
     </form>
   </div>
   <script>
+    // Get user info
+    const user = JSON.parse(localStorage.getItem('dayleeUser') || '{}');
+
     // --- Calendar Logic ---
     function loadEvents() {
       return JSON.parse(localStorage.getItem('dayleeEvents') || '[]');
@@ -84,50 +87,59 @@
 
     // --- Weather Logic ---
     async function getWeatherString() {
+      if (user && user.location) {
+        const geo = await fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(user.location)}&limit=1`).then(r=>r.json());
+        if (geo && geo[0]) {
+          const lat = geo[0].lat, lon = geo[0].lon;
+          return fetchWeather(lat, lon);
+        }
+      }
       return new Promise((resolve) => {
         if (!navigator.geolocation) {
           resolve("Geolocation is not supported by your browser.");
           return;
         }
         navigator.geolocation.getCurrentPosition(
-          pos => {
-            const lat = pos.coords.latitude;
-            const lon = pos.coords.longitude;
-            fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current_weather=true&hourly=temperature_2m,apparent_temperature,precipitation,weathercode,cloudcover,windspeed_10m,winddirection_10m,relativehumidity_2m&daily=temperature_2m_max,temperature_2m_min,sunrise,sunset,precipitation_sum,weathercode&temperature_unit=auto&windspeed_unit=auto&precipitation_unit=mm&timezone=auto`)
-              .then(res => res.json())
-              .then(data => {
-                if (!data.current_weather) {
-                  resolve("Weather data not available for your location.");
-                  return;
-                }
-                const w = data.current_weather;
-                const daily = data.daily;
-                const weatherCodes = {
-                  0: "Clear sky", 1: "Mainly clear", 2: "Partly cloudy", 3: "Overcast",
-                  45: "Fog", 48: "Depositing rime fog", 51: "Light drizzle", 53: "Drizzle", 55: "Dense drizzle",
-                  56: "Freezing drizzle", 57: "Freezing drizzle", 61: "Slight rain", 63: "Rain", 65: "Heavy rain",
-                  66: "Freezing rain", 67: "Freezing rain", 71: "Slight snow", 73: "Snow", 75: "Heavy snow",
-                  77: "Snow grains", 80: "Rain showers", 81: "Rain showers", 82: "Violent rain showers",
-                  85: "Snow showers", 86: "Heavy snow showers", 95: "Thunderstorm", 96: "Thunderstorm hail", 99: "Thunderstorm hail"
-                };
-                resolve(
-                  `Current weather: <b>${weatherCodes[w.weathercode] || "Unknown"}</b><br>
-                  Temperature: ${w.temperature}°C<br>
-                  Wind: ${w.windspeed} km/h<br>
-                  Cloud Cover: ${data.hourly.cloudcover[0]}%<br>
-                  Humidity: ${data.hourly.relativehumidity_2m[0]}%<br>
-                  Today's High: ${daily.temperature_2m_max[0]}°C, Low: ${daily.temperature_2m_min[0]}°C`
-                );
-              })
-              .catch(() => resolve("Could not fetch weather data."));
-          },
+          pos => fetchWeather(pos.coords.latitude, pos.coords.longitude).then(resolve),
           () => resolve("Could not get your location for weather. Please allow location access.")
         );
       });
+      function fetchWeather(lat, lon) {
+        return fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current_weather=true&hourly=temperature_2m,apparent_temperature,precipitation,weathercode,cloudcover,windspeed_10m,winddirection_10m,relativehumidity_2m&daily=temperature_2m_max,temperature_2m_min,sunrise,sunset,precipitation_sum,weathercode&temperature_unit=auto&windspeed_unit=auto&precipitation_unit=mm&timezone=auto`)
+          .then(res => res.json())
+          .then(data => {
+            if (!data.current_weather) {
+              return "Weather data not available for your location.";
+            }
+            const w = data.current_weather;
+            const daily = data.daily;
+            const weatherCodes = {
+              0: "Clear sky", 1: "Mainly clear", 2: "Partly cloudy", 3: "Overcast",
+              45: "Fog", 48: "Depositing rime fog", 51: "Light drizzle", 53: "Drizzle", 55: "Dense drizzle",
+              56: "Freezing drizzle", 57: "Freezing drizzle", 61: "Slight rain", 63: "Rain", 65: "Heavy rain",
+              66: "Freezing rain", 67: "Freezing rain", 71: "Slight snow", 73: "Snow", 75: "Heavy snow",
+              77: "Snow grains", 80: "Rain showers", 81: "Rain showers", 82: "Violent rain showers",
+              85: "Snow showers", 86: "Heavy snow showers", 95: "Thunderstorm", 96: "Thunderstorm hail", 99: "Thunderstorm hail"
+            };
+            return `Current weather: <b>${weatherCodes[w.weathercode] || "Unknown"}</b><br>
+              Temperature: ${w.temperature}°C<br>
+              Wind: ${w.windspeed} km/h<br>
+              Cloud Cover: ${data.hourly.cloudcover[0]}%<br>
+              Humidity: ${data.hourly.relativehumidity_2m[0]}%<br>
+              Today's High: ${daily.temperature_2m_max[0]}°C, Low: ${daily.temperature_2m_min[0]}°C`;
+          })
+          .catch(() => "Could not fetch weather data.");
+      }
     }
 
     // --- Location Logic ---
     async function getLocationString() {
+      if (user && user.location) {
+        const geo = await fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(user.location)}&limit=1`).then(r=>r.json());
+        if (geo && geo[0] && geo[0].display_name) {
+          return `Your default location: <b>${geo[0].display_name}</b>`;
+        }
+      }
       return new Promise((resolve) => {
         if (!navigator.geolocation) {
           resolve("Geolocation is not supported by your browser.");
@@ -155,39 +167,36 @@
 
     // --- Directions Logic ---
     async function getDirectionsString(query) {
-      // Try to get user location
-      return new Promise((resolve) => {
-        if (!navigator.geolocation) {
-          resolve("Geolocation is not supported by your browser.");
-          return;
+      async function getLatLon() {
+        if (user && user.location) {
+          const geo = await fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(user.location)}&limit=1`).then(r=>r.json());
+          if (geo && geo[0]) return {lat: geo[0].lat, lon: geo[0].lon};
         }
-        navigator.geolocation.getCurrentPosition(
-          async pos => {
-            const lat = pos.coords.latitude;
-            const lon = pos.coords.longitude;
-            // If query looks like an address (has numbers or commas), just use it
-            if (/\d+|,/.test(query)) {
-              const url = `https://www.google.com/maps/dir/?api=1&origin=${lat},${lon}&destination=${encodeURIComponent(query)}`;
-              resolve(`Directions: <a class="directions-link" href="${url}" target="_blank">${query}</a>`);
-              return;
-            }
-            // Otherwise, search for the nearest place using Nominatim
-            fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(query)}&limit=1&viewbox=${lon-0.1},${lat+0.1},${lon+0.1},${lat-0.1}&bounded=1`)
-              .then(res => res.json())
-              .then(results => {
-                if (results && results.length > 0) {
-                  const place = results[0];
-                  const url = `https://www.google.com/maps/dir/?api=1&origin=${lat},${lon}&destination=${place.lat},${place.lon}`;
-                  resolve(`Directions to nearest <b>${query}</b>: <a class="directions-link" href="${url}" target="_blank">${place.display_name}</a>`);
-                } else {
-                  resolve("Sorry, I couldn't find that place nearby.");
-                }
-              })
-              .catch(() => resolve("Sorry, I couldn't search for that place."));
-          },
-          () => resolve("Could not get your location for directions. Please allow location access.")
-        );
-      });
+        return new Promise((resolve, reject) => {
+          if (!navigator.geolocation) return reject();
+          navigator.geolocation.getCurrentPosition(
+            pos => resolve({lat: pos.coords.latitude, lon: pos.coords.longitude}),
+            () => reject()
+          );
+        });
+      }
+      try {
+        const {lat, lon} = await getLatLon();
+        if (/\d+|,/.test(query)) {
+          const url = `https://www.google.com/maps/dir/?api=1&origin=${lat},${lon}&destination=${encodeURIComponent(query)}`;
+          return `Directions: <a class="directions-link" href="${url}" target="_blank">${query}</a>`;
+        }
+        const results = await fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(query)}&limit=1&viewbox=${lon-0.1},${lat+0.1},${lon+0.1},${lat-0.1}&bounded=1`).then(r=>r.json());
+        if (results && results.length > 0) {
+          const place = results[0];
+          const url = `https://www.google.com/maps/dir/?api=1&origin=${lat},${lon}&destination=${place.lat},${place.lon}`;
+          return `Directions to nearest <b>${query}</b>: <a class="directions-link" href="${url}" target="_blank">${place.display_name}</a>`;
+        } else {
+          return "Sorry, I couldn't find that place nearby.";
+        }
+      } catch {
+        return "Could not get your location for directions. Please allow location access or set a default location in setup.";
+      }
     }
 
     // --- Activity Suggestion State ---
@@ -195,21 +204,36 @@
 
     // --- Input Parsing ---
     function parseInput(input) {
-      input = input.toLowerCase();
+      input = input.toLowerCase().trim();
 
-      // Add event
-      let addMatch = input.match(/add (?:an?|the)?\s*(.*?)\s*(?:appointment|event)?\s*(?:at|@)?\s*([0-9:apm ]+)?\s*(?:on)?\s*(monday|tuesday|wednesday|thursday|friday|saturday|sunday)/);
-      if (addMatch) {
-        return {
-          intent: 'add',
-          title: addMatch[1] ? addMatch[1].trim() : 'Event',
-          time: addMatch[2] ? addMatch[2].trim() : '',
-          day: addMatch[3]
-        };
+      // Smarter: handle more flexible add, delete, and query
+      if (/^(add|schedule|create)\b/.test(input)) {
+        // Try to extract title, time, day
+        let match = input.match(/(?:add|schedule|create) (.+?)(?: at ([0-9:apm ]+))?(?: on )?(monday|tuesday|wednesday|thursday|friday|saturday|sunday)?/);
+        if (match) {
+          return {
+            intent: 'add',
+            title: match[1] ? match[1].trim() : 'Event',
+            time: match[2] ? match[2].trim() : '',
+            day: match[3]
+          };
+        }
       }
 
-      // "Can I do X at TIME on DAY"
-      let canDoMatch = input.match(/can i (.+?) (?:at\s*([0-9:apm ]+))?\s*(?:on)?\s*(monday|tuesday|wednesday|thursday|friday|saturday|sunday)/);
+      if (/^(delete|remove|cancel)\b/.test(input)) {
+        let match = input.match(/(?:delete|remove|cancel) (.+?)(?: at ([0-9:apm ]+))?(?: on )?(monday|tuesday|wednesday|thursday|friday|saturday|sunday)?/);
+        if (match) {
+          return {
+            intent: 'delete',
+            title: match[1] ? match[1].trim() : null,
+            time: match[2] ? match[2].trim() : null,
+            day: match[3]
+          };
+        }
+      }
+
+      // "Can I do X at TIME on DAY" or "Am I free at TIME on DAY"
+      let canDoMatch = input.match(/(?:can i|am i able to|is it possible to|am i free to|could i|would i be able to) (.+?) (?:at\s*([0-9:apm ]+))?\s*(?:on)?\s*(monday|tuesday|wednesday|thursday|friday|saturday|sunday)/);
       if (canDoMatch) {
         return {
           intent: 'can_do',
@@ -236,32 +260,11 @@
         return { intent: 'add_last_suggestion' };
       }
 
-      // Delete event
-      let delMatch = input.match(/delete (?:the )?(.*?)(?: (?:on|at) )?([0-9:apm ]+)?(?: on )?(monday|tuesday|wednesday|thursday|friday|saturday|sunday)?/);
-      if (delMatch && (delMatch[1] || delMatch[2] || delMatch[3])) {
-        return {
-          intent: 'delete',
-          title: delMatch[1] ? delMatch[1].trim() : null,
-          time: delMatch[2] ? delMatch[2].trim() : null,
-          day: delMatch[3]
-        };
-      }
-
-      // Calendar query
-      let queryMatch = input.match(
-        /(can i|do i|am i|is there|what's|what is|show|list|anything|free|available|busy|plans?|scheduled?|events?).*?(on|for)?\s*(monday|tuesday|wednesday|thursday|friday|saturday|sunday)/
-      );
-      if (queryMatch) {
-        return {
-          intent: 'query',
-          day: queryMatch[3]
-        };
-      }
-
       // List all events
-      if (input.match(/all events|everything|full calendar|show calendar|list all|what's my week|what's my schedule/)) {
+      if (input.match(/all events|everything|full calendar|show calendar|list all|what's my week|what's my schedule|show my week|show my schedule/)) {
         return { intent: 'list' };
       }
+
       // Weather
       if (input.match(/weather|temperature|forecast|rain|sunny|cloudy|wind|humidity/)) {
         return { intent: 'weather' };
@@ -275,6 +278,19 @@
         const match = input.match(/(directions|how do i get to|navigate|route|way to|get to|take me to|go to|drive to|walk to|show me the way to|find directions to)\s+(.+)/);
         return { intent: 'directions', query: match[2].trim() };
       }
+
+      // General queries: "What am I doing on Friday", "What's planned for Monday"
+      let queryMatch = input.match(
+        /(can i|do i|am i|is there|what's|what is|show|list|anything|free|available|busy|plans?|scheduled?|events?).*?(on|for)?\s*(monday|tuesday|wednesday|thursday|friday|saturday|sunday)/
+      );
+      if (queryMatch) {
+        return {
+          intent: 'query',
+          day: queryMatch[3]
+        };
+      }
+
+      // Fallback
       return { intent: 'unknown' };
     }
 
@@ -284,6 +300,7 @@
 
       // Add event
       if (parsed.intent === 'add') {
+        if (!parsed.day) return "Please specify a day for your event.";
         const date = getNextDateForWeekday(parsed.day);
         const events = loadEvents();
         events.push({
@@ -299,6 +316,7 @@
 
       // Can I do X at TIME on DAY
       if (parsed.intent === 'can_do') {
+        if (!parsed.day) return "Please specify a day.";
         const date = getNextDateForWeekday(parsed.day);
         const events = loadEvents().filter(e => e.date === date);
         let busy = false;
@@ -316,7 +334,6 @@
           lastSuggestedActivity = null;
           return `No, you already have "${conflictEvent.title}" at ${parsed.time} on ${parsed.day}.`;
         } else {
-          // Add the activity as an event
           events.push({
             title: parsed.activity,
             date: date,
@@ -331,11 +348,10 @@
 
       // When can I do X on DAY (optionally between times)
       if (parsed.intent === 'when_can_do') {
+        if (!parsed.day) return "Please specify a day.";
         const date = getNextDateForWeekday(parsed.day);
         const events = loadEvents().filter(e => e.date === date && e.time);
-        // Build a list of busy times
         const busyTimes = events.map(e => e.time.replace(/\s/g,''));
-        // Build a list of possible times (every 30 min between 8:00 and 20:00 or user range)
         function parseTime(t) {
           t = t.trim().toLowerCase();
           let [h, m] = t.split(':');
@@ -408,6 +424,7 @@
 
       // Calendar query
       if (parsed.intent === 'query') {
+        if (!parsed.day) return "Please specify a day.";
         const date = getNextDateForWeekday(parsed.day);
         return formatEventsForDate(date, parsed.day);
       }
@@ -451,7 +468,8 @@
     });
 
     // Greet on load
-    appendMessage('ai', "Hi! Ask me about your calendar, weather, location, or directions. For example:<br>- Add a dentist appointment at 3:00 on Monday<br>- Can I do homework at 5:00 on Friday<br>- When can I do homework on Friday inbetween 10:00 and 2:00<br>- Add that to my calendar<br>- Delete homework at 10:00 on Friday<br>- What's the weather?<br>- Where am I?<br>- Directions to Starbucks or 123 Main St");
+    const greetName = user.name ? user.name : "there";
+    appendMessage('ai', `Hi ${greetName}! Ask me about your calendar, weather, location, or directions. For example:<br>- Add a dentist appointment at 3:00 on Monday<br>- Can I do homework at 5:00 on Friday<br>- When can I do homework on Friday inbetween 10:00 and 2:00<br>- Add that to my calendar<br>- Delete homework at 10:00 on Friday<br>- What's the weather?<br>- Where am I?<br>- Directions to Starbucks or 123 Main St`);
   </script>
     <footer>
     Daylee -  Organize your life, your way.
