--- a/calendar.html
+++ b/calendar.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="/uploads/images/favicon.png" type="image/png">
   <link href="/css/calendar.css" rel="stylesheet">
   <link href="/css/main.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2" defer></script>
 </head>
 <body>
   <a href="/dashboard" id="top-link">< Dashboard</a>
