--- a/calendar.html
+++ b/calendar.html
@@ -74,7 +74,7 @@
 <script>
 const supabase = createClient(
   "https://yokrcscbxfqucigedgqn.supabase.co",
-  "your-supabase-anon-key"
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5tZ2lrZXZxeWR2dmpkZ3BkaGpiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgzNzI4ODcsImV4cCI6MjA2Mzk0ODg4N30.1zPr-aOlkETD4FhuwhneHoXavSE6N0uNu-awxsidAZQ"
 );
 
 let myProfile = null;
