--- a/calendar.html
+++ b/calendar.html
@@ -1,80 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Daylee Calendar</title>
-  <meta name="description" content="Your Daylee calendar – see your events, weather, and more.">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="icon" href="/uploads/images/favicon.png" type="image/png">
-  <link href="/css/calendar.css" rel="stylesheet">
-  <link href="/css/main.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0; padding: 0;
+      background: #f8f9fa;
+    }
+    header {
+      background-color: #0d6efd;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    #notification {
+      background-color: #ffc107;
+      color: black;
+      padding: 0.5rem;
+      text-align: center;
+      display: none;
+    }
+    #calendarGrid {
+      display: grid;
+      grid-template-columns: repeat(7, 1fr);
+      gap: 1px;
+      background-color: #dee2e6;
+      padding: 1rem;
+    }
+    .calendar-cell {
+      background: white;
+      padding: 0.5rem;
+      height: 100px;
+      overflow-y: auto;
+      border: 1px solid #ccc;
+      cursor: pointer;
+      position: relative;
+    }
+    .event-badge {
+      background: #0d6efd;
+      color: white;
+      font-size: 0.75rem;
+      padding: 2px 4px;
+      margin-top: 4px;
+      display: inline-block;
+      border-radius: 4px;
+    }
+    .modal-bg {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.5);
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+    .modal {
+      background: white;
+      padding: 1rem;
+      width: 300px;
+      border-radius: 8px;
+    }
+    .modal-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .modal-header button {
+      background: none;
+      border: none;
+      font-size: 1.2rem;
+      cursor: pointer;
+    }
+    form > div {
+      margin-bottom: 0.75rem;
+    }
+    button {
+      background: #0d6efd;
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+  </style>
 </head>
 <body>
-  <a href="/dashboard" id="top-link">< Dashboard</a>
-  <div class="calendar-header">
-    <img src="/uploads/images/daylee.png" alt="Daylee Logo" class="calendar-logo">
-    <div class="calendar-title">Family Calendar</div>
-    <div class="calendar-subtitle">See your family's events, weather, and more</div>
-  </div>
-  <div class="calendar-container">
-    <button class="add-event-btn" id="addEventBtn" title="Add Event">+</button>
-    <div class="calendar-controls">
-      <button id="prevMonth">&lt;</button>
-      <span id="monthYear"></span>
-      <button id="nextMonth">&gt;</button>
-    </div>
-    <div class="calendar-grid" id="calendarGrid"></div>
-  </div>
-  <!-- Modal for adding event -->
-  <div class="modal-bg" id="eventModalBg" style="display:none;">
+
+  <header>
+    <h1>Daylee Family Calendar</h1>
+  </header>
+
+  <div id="notification"></div>
+
+  <div id="calendarGrid"></div>
+
+  <!-- View Day Modal -->
+  <div id="dayModalBg" class="modal-bg">
     <div class="modal">
-      <button class="modal-close" id="closeEventModal">&times;</button>
-      <div class="modal-title">Add Event</div>
-      <form class="modal-form" id="eventForm">
-        <input type="text" id="eventTitle" placeholder="Event Title" required>
-        <input type="date" id="eventDate" required>
-        <input type="time" id="eventTime">
-        <textarea id="eventDesc" placeholder="Description"></textarea>
-        <button type="submit">Add Event</button>
+      <div class="modal-header">
+        <h3 id="selectedDateDisplay">Events</h3>
+        <button id="closeDayModal">&times;</button>
+      </div>
+      <ul id="eventList"></ul>
+      <button id="addEventButton">+ Add Event</button>
+    </div>
+  </div>
+
+  <!-- Add Event Modal -->
+  <div id="eventModalBg" class="modal-bg">
+    <div class="modal">
+      <div class="modal-header">
+        <h3>Add Event</h3>
+        <button id="closeEventModal">&times;</button>
+      </div>
+      <form id="eventForm">
+        <div>
+          <label>Title</label>
+          <input type="text" id="eventTitle" required />
+        </div>
+        <div>
+          <label>Time</label>
+          <input type="time" id="eventTime" />
+        </div>
+        <div>
+          <label>Description</label>
+          <textarea id="eventDesc" rows="2"></textarea>
+        </div>
+        <input type="hidden" id="eventDate" />
+        <button type="submit">Save Event</button>
       </form>
     </div>
   </div>
-  <!-- Modal for day detail (hourly schedule) -->
-  <div class="modal-bg" id="dayDetailModalBg" style="display:none;">
-    <div class="day-detail-modal">
-      <button class="modal-close" id="closeDayDetailModal">&times;</button>
-      <div class="day-detail-title" id="dayDetailTitle"></div>
-      <div class="hour-schedule" id="hourSchedule"></div>
-    </div>
-  </div>
-  <!-- Tutorial Modal -->
-  <div class="modal-bg" id="tutorialModalBg" style="display:none; z-index:10000;">
-    <div class="modal">
-      <button class="modal-close" id="closeTutorialModal">&times;</button>
-      <div class="modal-title">Welcome to Daylee Calendar!</div>
-      <div style="font-size:1.05rem; color:#22223b; margin-bottom:1.2rem;">
-        <ul style="text-align:left; padding-left:1.2em; margin:0;">
-          <li><b>Navigate months</b> with the <span style="color:#2563eb;">&lt;</span> and <span style="color:#2563eb;">&gt;</span> buttons.</li>
-          <li><b>Add events</b> with the <span style="color:#06b6d4;">+</span> button in the top right or next to any hour.</li>
-          <li><b>Click a day</b> to view and schedule events by the hour.</li>
-          <li>Your events are shared with your family automatically.</li>
-        </ul>
-        <div style="margin-top:1.2em; color:#64748b; font-size:0.98em;">
-          You can always revisit this tutorial from the menu.
-        </div>
-      </div>
-      <button id="tutorialGotItBtn" class="modal-form" style="margin:0 auto; width:70%;">Got it!</button>
-    </div>
-  </div>
-  <!-- Notification Container -->
-  <div id="notification" style="display:none;position:fixed;top:1.2rem;right:1.2rem;z-index:12000;min-width:220px;max-width:90vw;padding:1rem 1.5rem;background:linear-gradient(90deg,#2563eb 0%,#06b6d4 100%);color:#fff;font-size:1.1rem;font-weight:600;border-radius:1em;box-shadow:0 4px 24px #2563eb33;transition:opacity 0.3s,transform 0.3s;opacity:0;pointer-events:none;"></div>
-<!-- ... Everything before this remains unchanged ... -->
-<script>
+
+  <script type="module" src="daylee.js">
+import { createClient } from "https://cdn.skypack.dev/@supabase/supabase-js";
+
 const supabase = createClient(
   "https://yokrcscbxfqucigedgqn.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5tZ2lrZXZxeWR2dmpkZ3BkaGpiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgzNzI4ODcsImV4cCI6MjA2Mzk0ODg4N30.1zPr-aOlkETD4FhuwhneHoXavSE6N0uNu-awxsidAZQ"
+  "your-supabase-anon-key"
 );
 
 let myProfile = null;
@@ -256,10 +322,7 @@ window.addEventListener("DOMContentLoaded", async () => {
   await getProfileAndFamily();
   await loadFamilyCalendar();
 });
-</script>
 
-  <footer>
-    Daylee -  Organize your life, your way.
-  </footer>
+  </script>
 </body>
 </html>
