--- a/ai.html
+++ b/ai.html
@@ -28,7 +28,7 @@
 <body>
   <a href="/dashboard" id="top-link" style="color:#2563eb;text-decoration:none;font-weight:600;font-size:1.1em;display:block;margin:1.5em 0 0 2em;">&lt; Dashboard</a>
   <header>
-    <img src="/uploads/images/daylee.png" alt="Daylee Logo" class="logo" />
+    <img src="/uploads/images/daylee.png" alt="Daylee Logo" class="logo" style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" />
     <br>
     <span class="calendar-title">Schedula AI</span>
     <div class="calendar-subtitle">A powerful ai that tells you about your schedule</div>
