--- a/dashboard.html
+++ b/dashboard.html
@@ -26,7 +26,7 @@
   });
 </script>
   <header>
-     <img src="/uploads/images/daylee.png" alt="Daylee Logo" style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" />
+     <img src="/uploads/images/daylee.png" alt="Daylee Logo" style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" class="logo" />
      <br>
     <span class="logo">daylee</span>
     <div class="subtitle">A calendar app, reimagined.<br>Smarter, simpler, and more connected to your day.</div>
