--- a/calendar.html
+++ b/calendar.html
@@ -14,10 +14,10 @@
 <body>
   <a href="/dashboard" id="top-link" style="color:#2563eb;text-decoration:none;font-weight:600;font-size:1.1em;display:block;margin:1.5em 0 0 2em;">&lt; Dashboard</a>
   <header>
-    <img src="/uploads/images/daylee.png" alt="Daylee Logo" class="logo" style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" />
-    <br>
-    <span class="calendar-title">Family Calendar</span>
-    <div class="calendar-subtitle">A powerful, shared calendar for your whole family</div>
+     <img src="/uploads/images/daylee.png" alt="Daylee Logo" style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" class="logo" />
+     <br>
+    <span class="logo">daylee</span>
+    <div class="subtitle">A calendar app, reimagined.<br>Smarter, simpler, and more connected to your day.</div>
   </header>
   <div class="calendar-container" style="position:relative;">
     <button class="add-event-btn" id="addEventBtn" title="Add Event">+</button>
