--- a/locate.html
+++ b/locate.html
@@ -59,10 +59,10 @@
 <body>
     <a href="/dashboard" id="top-link">< Dashboard</a>
   <header>
-    <img src="/uploads/images/daylee.png" alt="Daylee Logo" style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" />
-    <br>
+     <img src="/uploads/images/daylee.png" alt="Daylee Logo" style="width:64px;height:64px;border-radius:16px;box-shadow:0 4px 16px #2563eb22;margin-bottom:0.5rem;animation: popIn 1.2s cubic-bezier(.4,0,.2,1);" class="logo" />
+     <br>
     <span class="logo">daylee</span>
-    <div class="subtitle">Find your location & get directions.</div>
+    <div class="subtitle">A calendar app, reimagined.<br>Smarter, simpler, and more connected to your day.</div>
   </header>
   <main>
     <section class="location-section">
