--- a/weather.html
+++ b/weather.html
@@ -206,5 +206,8 @@
     // Initial load
     getLocationAndWeather();
   </script>
+  <footer>
+    Daylee -  Organize your life, your way.
+  </footer>
 </body>
 </html>
