--- a/ai.html
+++ b/ai.html
@@ -402,5 +402,8 @@ I understand many ways to ask about your calendar, events, and even math!`;
     loadProfileAndEvents();
     appendMessage("Hi! Ask me anything about your calendar. I understand many ways to ask about your events, time, and even math. Type 'help' for examples.", "ai");
   </script>
+  <footer>
+    Daylee -  Organize your life, your way.
+  </footer>
 </body>
 </html>
